...
        appLogger.info("Private server deployment was cancelled.");
      }
      return null;
    }, [serverState.status]);

    return BaseScreen(
      title: 'Deploying Private Server',
      body: Column(
        mainAxisAlignment: MainAxisAlignment.spaceBetween,
        children: <Widget>[
          Padding(
            padding: const EdgeInsets.symmetric(horizontal: 16.0),
            child: Text(
...
              child: AppImage(
            path: AppImagePaths.greenCheck,
          )),
          SizedBox(height: 16),
          Center(
            child: Text(
              'private_server_ready'.i18n,
              style: textTheme!.titleLarge,
              textAlign: TextAlign.center,
            ),
          ),
          SizedBox(height: 16),
          Text(
...
